fixed new game option not showing after last update

--- a/ScoreGames/home/styles.css
+++ b/ScoreGames/home/styles.css
@@ -243,7 +243,7 @@ body {
     box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
     width: 25px;
     height: 25px;
-    
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -307,6 +307,7 @@ body {
     padding-top: 25px;
     margin: auto;
     justify-content: center;
+    align-items: center;
 }
 
 /* label for the game Name */
@@ -317,6 +318,11 @@ body {
 /* Text input for the game name */
 .formTextInput {
     font-size: 16px;
+    padding: 5px;
+    border-radius: 10px;
+    border: 0.5px solid gray;
+    background-color: var(--card-background);
+    color: var(--text-color)
 }
 
 
